# djangoexampleapp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: django.yml
accounts/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  views.py
accounts/migrations/: 0002_auto_20231019_0752.py  0003_user_groups_user_user_permissions.py  0004_profile_full_name.py  0005_user_email_verified.py  0005_user_email_verified_alter_user_is_active.py
accounts/tests/: test_allauth_signup.py  test_models.py  test_views.py
config/: README
data/: inspirational_quotes.txt
djangoexampleapp/: asgi.py  settings.py  urls.py  wsgi.py
djangoexampleapp/settings/: __init__.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf
quotes/: admin.py  lib.py  models.py  tests.py  views.py
quotes/migrations/: 0001_initial.py  0002_quote_author.py  0003_alter_quote_poster.py  0003_remove_quote_poster_quote_user_profile.py  0004_quoteauthor_alter_quote_author.py  0005_quote_tags.py  0006_quoteauthor_country.py  0007_quoteauthor_slug.py  0008_alter_quoteauthor_slug.py  0009_remove_quoteauthor_slug.py  0010_quoteauthor_slug.py  0011_alter_quoteauthor_slug.py
quotes/templates/: authors.html  base.html  home.html
server/: asgi.py  urls.py  utils.py  wsgi.py
templates/: base_layout.html  home.html  site_base.html
users/: admin.py  forms.py  models.py  tests.py  views.py
(+34 files in other folders)
